[gd_scene load_steps=2 format=2]

[ext_resource path="res://Options.gd" type="Script" id=1]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -20.0
margin_right = 38.5
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 196.0
margin_bottom = 20.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
tab_size = 6
text = "Wow
"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 135.0
margin_bottom = 20.0
toggle_mode = true
text = "On"

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
margin_left = 139.0
margin_right = 139.0
margin_bottom = 20.0
text = "wow 2"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 143.0
margin_right = 196.0
margin_bottom = 20.0
text = "Words"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 196.0
margin_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
margin_bottom = 16.0
text = "Slider words
"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 4.0
margin_right = 20.0
margin_bottom = 16.0

[node name="ExitOptions" type="Button" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 196.0
margin_bottom = 64.0
text = "X"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitOptions" to="." method="_on_ExitOptions_pressed"]
